# AndroidGLPlayground

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/ergv/glsandbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  new.xml
app/src/main/assets/shaders/: hello_fs.glsl  hello_vs.glsl  monochrome_fs.glsl  postion_and_normal_vs.glsl  quantized_fs.glsl  quantized_vs.glsl
app/src/main/assets/shaders/chess/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/fragment/: color_fragment_shader.glsl  monochrome_face_fragment.glsl  monochrome_fs.glsl  quantized_color_fragment_shader.glsl
app/src/main/assets/shaders/hello_texture/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/julia_fractals/: fragment.glsl  geo.glsl  vertex.glsl  vivian.glsl
app/src/main/assets/shaders/mandelbrot/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/monochrome_with_normals/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/quantized_colors/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/vertex/: color_vertex_shader.glsl  monochrome_face_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  GLRenderer.cpp  gl_includes.h  gl_logging.cpp  gl_logging.h  logger.cpp  logger.h  native_lib.cpp
app/src/main/cpp/engine/: AssetsFactory.cpp  AssetsFactory.h  Boundaries.h  Camera.cpp  Camera.h  PerlinNoiseGenerator.cpp  TexturesFactory.h  Transform.h  shadersBuilder.cpp  shadersBuilder.h  texturesFactory.cpp  texturesFactory.h
app/src/main/cpp/engine/Lights/: PointLight.h
app/src/main/cpp/engine/libs/glm/: CMakeLists.txt  fwd.hpp  glm.hpp  matrix.hpp
app/src/main/cpp/engine/libs/glm/detail/: type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl
app/src/main/cpp/engine/libs/glm/ext/: matrix_integer.hpp
app/src/main/cpp/engine/libs/glm/gtc/: packing.inl  quaternion.hpp  type_ptr.hpp
app/src/main/cpp/engine/libs/glm/gtx/: euler_angles.hpp  matrix_decompose.inl  pca.hpp  rotate_vector.hpp
app/src/main/cpp/engine/lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  environmentLight.h
app/src/main/cpp/engine/materials/: Material.cpp  Material.h
app/src/main/cpp/exclude_from_build/: Camera.cpp  Camera.h  Matrix.cpp  Matrix.h  PointLight.cpp  PointLight.h  Utils.cpp  Utils.h
app/src/main/cpp/models/: Model.h
app/src/main/cpp/models/Chess/: ChessCube.cpp  ChessCube.h  ChessPyramid.cpp  ChessPyramid.h  Icosahedron.cpp  Icosahedron.h
app/src/main/cpp/models/FractaledPolyhedrons/: FractalCube.cpp  FractalCube.h
app/src/main/cpp/models/MonochromeCube/: MonochromeCube.cpp  MonochromeCube.h
app/src/main/cpp/models/OrangePyramid/: OrangePyramid.cpp  OrangePyramid.h
app/src/main/cpp/models/QuantizedCube/: QuantizedCube.cpp  QuantizedCube.h
app/src/main/cpp/models/TexturesTest/: TexturedCube.cpp  TexturedCube.h  TexturedPyramid.cpp  TexturedPyramid.h
app/src/main/cpp/models/monochromeShapes/: MonochromeCube.cpp  MonochromeCube.h  OrangePyramid.cpp  OrangePyramid.h
app/src/main/cpp/models/monochromeShapes/plutonic/: Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h
app/src/main/cpp/scenes/: ChessAndBricksScene.cpp  Scene.cpp  Scene.h  fractalPolyhedronsScene.cpp  monochromaticShapes.cpp  quantizedModelsScene.cpp  texturedModelsScene.cpp
app/src/main/java/com/ergv/gles/playground/: AbstractJNILib.kt  AssetsFactory.kt  ChessAndBricksSceneLib.kt  FractalPolyhedronsSceneLib.kt  GLSceneActivity.kt  GLSceneView.kt  MainMenuActivity.kt  MonochromaticModels.kt  QuantizedPolyhedronsSceneLib.kt
app/src/main/java/com/ergv/gles/playground/scenes/: AbstractScene.kt  ChessAndBricksSceneLib.kt  FractalPolyhedronsSceneLib.kt  MonochromaticModels.kt  QuantizedPolyhedronsSceneLib.kt  TexturedModelsSceneLib.kt
app/src/main/java/com/ergv/gles/playground/theme/ui/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/ergv/glsandbox/: AbstractJNILib.kt  AssetsFactory.kt  FractalPolyhedronsSceneLib.kt  GLRenderer.kt  GLSceneActivity.kt  GLSceneView.kt  ImageButtonFragment.kt  MainActivity.kt  MainActivity2.kt  MainMenuActivity.kt  NativeActivity.kt  QuantizedPolyhedronsSceneLib.kt
app/src/main/java/com/ergv/glsandbox/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/raw/: fragment.glsl
app/src/main/res/layout/: activity_main2.xml  image_button_fragment.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/values/: strings.xml  themes.xml
app/src/main/values-night/: themes.xml
app/src/test/java/com/ergv/glsandbox/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
